finished detail anak

--- a/Bintangku.WebUI/client/src/app/app.component.html
+++ b/Bintangku.WebUI/client/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-layout>
-  <router-outlet></router-outlet>
+  <router-outlet (activate)="onActivate($event)"></router-outlet>
 </app-layout>
 <!-- This example requires Tailwind CSS v2.0+ -->
