--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/lingkar-kepala/lingkar-kepala.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/lingkar-kepala/lingkar-kepala.component.html
@@ -1,45 +1,39 @@
 <h2 mat-dialog-title>Petunjuk Lingkar Kepala</h2>
 <mat-dialog-content class="mat-typography">
   <!-- Petunjuk Lingkar Kepala -->
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Alat pengukur dilingkarkan pada kepala anak melewati dahi, diatas alis
-        mata, diatas kedua telinga, dan bagian belakang kepala yang menonjol,
-        tarik agak kencang.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>Baca angka pada pertemuan dengan angka.</li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Tanyakan tanggal lahir bayi/anak, hitung umur bayi/anak.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Hasil pengukuran dicatat pada grafik lingkaran kepala menurut umur dan
-        jenis kelamin anak.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Buat garis yang menghubungkan antara ukuran yang lalu dengan ukuran
-        sekarang
-      </li></mat-list-item
-    >
-  </mat-list>
+  <ul class="list-outside list-disc px-6">
+    <li>Alat pengukur dilingkarkan pada kepala anak melewati dahi, diatas alis
+      mata, diatas kedua telinga, dan bagian belakang kepala yang menonjol,
+      tarik agak kencang.
+    </li>
+    <li>Baca angka pada pertemuan dengan angka.</li>
+    <li>Tanyakan tanggal lahir bayi/anak, hitung umur bayi/anak.</li>
+    <li>Hasil pengukuran dicatat pada grafik lingkaran kepala menurut umur dan jenis kelamin anak.</li>
+    <li>Buat garis yang menghubungkan antara ukuran yang lalu dengan ukuran sekarang</li>
+  </ul>
   <!-- End - Petunjuk Lingkar Kepala -->
+  <div class="w-full my-4">
+    <form [formGroup]="formLinkar" #form="ngForm">
+      <div app-grid container="true" spacing="3">
+        <div app-grid item="true" xs="6">
+          <label class="mb-1" for="">Lingkar Kepala</label>
+          <div class="bg-blue-100 rounded-full bg-opacity-50 py-2 px-4">
+            <input matInput type="text" formControlName="head_circum">
+          </div>
+        </div>
+        <div app-grid item="true" xs="6">
+          <label class="mb-1" for="">Curva</label>
+          <div class="bg-blue-100 rounded-full bg-opacity-50 py-2 px-4">
+            <input matInput type="text" formControlName="curva">
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 </mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Close</button>
+<mat-dialog-actions>
+  <button mat-raised-button class="btn-submit" color="primary"
+    [mat-dialog-close]="formLinkar.value">
+    Submit
+  </button>
 </mat-dialog-actions>
