--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/tinggi-badan/tinggi-badan.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/dialogs/tinggi-badan/tinggi-badan.component.html
@@ -1,103 +1,30 @@
 <h2 mat-dialog-title>Petunjuk Tinggi Badan</h2>
 <mat-dialog-content class="mat-typography">
   <!-- Pengukuran Panjang Badan untuk anak 0- 24 bulan -->
-  <h3>Pengukuran Panjang Badan untuk anak 0- 24 bulan</h3>
-  <h3>Cara mengukur dengan posisi berbaring:</h3>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>Sebaiknya dilakukan oleh 2 orang.</li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>Bayi dibaringkan telentang pada alas yang datar.</li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>Kepala bayi menempel pada pembatas angka.</li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Petugas 1 : kedua tangan memegang kepala bayi agar tetap menempel pada
-        pembatas angka 0 (pembatas kepala).
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Baringkan bayi dengan hati−hati di atas timbangan sampai berhenti.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Petugas 2 : tangan kiri menekan lutut bayi agar lurus, tangan kanan
-        menekan batas kaki ke telapak kaki.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>Petugas 2 membaca angka di tepi diluar pengukur.</li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Jika Anak umur 0 - 24 bulan diukur berdiri, maka hasil pengukurannya
-        dikoreksi dengan menambahkan 0,7 cm.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <!-- End - Pengukuran Panjang Badan untuk anak 0- 24 bulan -->
-
-  <!-- Pengukuran Tinggi Badan untuk anak 24 - 72 Bulan -->
-  <h3 class="mt-4">Pengukuran Tinggi Badan untuk anak 24 - 72 Bulan</h3>
-  <h3>Cara mengukur dengan posisi berdiri:</h3>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>Anak tidak memakai sandal atau sepatu.</li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>Berdiri tegak menghadap kedepan.</li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Punggung, pantat dan tumit menempel pada tiang pengukur.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Turunkan batas atas pengukur sampai menempel di ubun−ubun.
-      </li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>Baca angka pada batas tersebut.</li></mat-list-item
-    >
-  </mat-list>
-  <mat-list role="list">
-    <mat-list-item role="listitem"
-      ><li>
-        Jika anak umur diatas 24 bulan diukur telentang, maka hasil
-        pengukurannya dikoreksi dengan mengurangkan 0,7 cm.
-      </li></mat-list-item
-    >
-  </mat-list>
+<p class="font-bold text-blue-700">Pengukuran Panjang Badan untuk anak 0- 24 bulan</p>
+<p>Cara mengukur dengan posisi berbaring:</p>
+<ul class="list-disc list-outside mb-3 px-6">
+  <li>Sebaiknya dilakukan oleh 2 orang.</li>
+  <li>Bayi dibaringkan telentang pada alas yang datar.</li>
+  <li>Kepala bayi menempel pada pembatas angka.</li>
+  <li>Petugas 1 : kedua tangan memegang kepala bayi agar tetap menempel pada pembatas angka 0 (pembatas kepala).</li>
+  <li>Baringkan bayi dengan hati−hati di atas timbangan sampai berhenti.</li>
+  <li>Petugas 2 : tangan kiri menekan lutut bayi agar lurus, tangan kanan menekan batas kaki ke telapak kaki.</li>
+  <li>Petugas 2 membaca angka di tepi diluar pengukur.</li>
+  <li>Jika Anak umur 0 - 24 bulan diukur berdiri, maka hasil pengukurannya dikoreksi dengan menambahkan 0,7 cm.</li>
+</ul>
+<p class="font-bold text-blue-700">Pengukuran Tinggi Badan untuk anak 24 - 72 Bulan</p>
+<p>Cara mengukur dengan posisi berdiri:</p>
+<ul class="list-disc list-outside px-6">
+  <li>Anak tidak memakai sandal atau sepatu.</li>
+  <li>Berdiri tegak menghadap kedepan.</li>
+  <li>Punggung, pantat dan tumit menempel pada tiang pengukur.</li>
+  <li>Turunkan batas atas pengukur sampai menempel di ubun−ubun.</li>
+  <li>Baca angka pada batas tersebut.</li>
+  <li>Jika anak umur diatas 24 bulan diukur telentang, maka hasil pengukurannya dikoreksi dengan mengurangkan 0,7 cm.</li>
+</ul>
   <!-- End - Pengukuran Tinggi Badan untuk anak 24 - 72 Bulan -->
 </mat-dialog-content>
-<mat-dialog-actions align="end">
+<mat-dialog-actions>
   <button mat-button mat-dialog-close>Close</button>
 </mat-dialog-actions>
